--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:label="Fruits"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
