--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,16 @@
         android:theme="@style/Theme.MaterialTest"
         tools:targetApi="31">
         <activity
+            android:name=".FruitActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:label="Fruits"
-            android:exported="true">
+            android:exported="true"
+            android:label="Fruits">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
